testsuite/tests/typecheck/should_fail/T23776.stderr
T23776.hs:8:6: error: [GHC-17916]
    Illegal visible type application in a pattern: @b
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

